src/App.css
.Header {
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  width: 100%;
  height: 5vh;
  background-color: #BB86FC;
}

.Signature {
  color: white;
  text-decoration: none;
}

.List {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 75%;
  width: 377px;
  word-break: break-all;
  overflow: auto;
}

.ListItem {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  max-width: 377px;
  width: 100%;
}

.ListDelete {
  display: flex;
  align-items: center;
  justify-content: center;
}

.AddItem {
  display: flex;
  flex-direction: row;
  padding: 20px;
}

.AddItemInput {
  background-color: white;
}

.Modal {
  display: flex;
  align-items: center;
  justify-content: center;
}

.ModalBox {
  text-align: center;
  width: 20vw;
  background-color: white;
  box-shadow: 12px 12px;
}

.Result {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100vh;
}

.Button {
  padding: 20px;
}

.App {
  text-align: center;
  color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  height: 100vh;
}

/***********************************************/

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

